# midastouch

./: .gitignore  README.md  pyproject.toml  test.py
data/: example.csv
midastouch/: __init__.py  accounts.py  pdf_to_csv.py
